[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling",
]

[project]
name = "blurb"
description = "Command-line tool to manage CPython Misc/NEWS.d entries."
readme = "README.md"
maintainers = [{name = "Python Core Developers", email="core-workflow@mail.python.org"}]
authors = [{ name="Larry Hastings", email="larry@hastings.org"}]
requires-python = ">=3.8"
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [
  "version",
]
[project.optional-dependencies]
tests = [
  "pyfakefs",
  "pytest",
  "pytest-cov",
]
[project.urls]
Changelog = "https://github.com/python/blurb/blob/main/README.md#changelog"
Homepage = "https://github.com/python/blurb"
Source = "https://github.com/python/blurb"
[project.scripts]
blurb = "blurb.blurb:main"

[tool.hatch]
version.source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"
