[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling",
]

[project]
name = "blurb"
description = "Command-line tool to manage CPython Misc/NEWS.d entries."
readme = "README.md"
maintainers = [
  { name = "Python Core Team", email = "core-workflow@mail.python.org" },
]
authors = [
  { name = "Larry Hastings", email = "larry@hastings.org" },
]
requires-python = ">=3.10"
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
]
dynamic = [ "version" ]
optional-dependencies.tests = [
  "pyfakefs",
  "pytest",
  "pytest-cov",
  "time-machine",
]
urls.Changelog = "https://github.com/python/blurb/blob/main/CHANGELOG.md"
urls.Homepage = "https://github.com/python/blurb"
urls.Source = "https://github.com/python/blurb"
scripts.blurb = "blurb._cli:main"

[tool.hatch]
version.source = "vcs"
version.raw-options.local_scheme = "no-local-version"
build.hooks.vcs.version-file = "src/blurb/_version.py"

[tool.ruff]
fix = true
format.preview = true
format.quote-style = "single"
format.docstring-code-format = true
lint.select = [
  "I", # isort
]
lint.ignore = [
  "E501", # Ignore line length errors (we use auto-formatting)
]
lint.preview = true

[tool.pyproject-fmt]
max_supported_python = "3.15"
